--- a/vercel.json
+++ b/vercel.json
@@ -1,15 +1,20 @@
 {
   "version": 2,
+  "functions": {
+    "api/*.py": {
+      "runtime": "python3.9"
+    }
+  },
   "builds": [
     {
-      "src": "./api/index.py",
+      "src": "api/index.py",
       "use": "@vercel/python"
     }
   ],
   "routes": [
     {
       "src": "/(.*)",
-      "dest": "./api/index.py"
+      "dest": "/api/index.py"
     }
   ]
 }
