--- a/.env.example
+++ b/.env.example
@@ -1,5 +1,13 @@
-# Database Configuration
-MYSQL_HOST=your_mysql_host
-MYSQL_USER=your_mysql_username
-MYSQL_PASSWORD=your_mysql_password
-MYSQL_DB=your_database_name
+# Database Configuration for Car Quest
+# For local development:
+# MYSQL_HOST=localhost
+# MYSQL_USER=root
+# MYSQL_PASSWORD=15313037S@i
+# MYSQL_DB=car_quest250
+
+# For Vercel deployment (use your cloud database):
+MYSQL_HOST=your_cloud_database_host
+MYSQL_USER=your_database_username
+MYSQL_PASSWORD=your_database_password
+MYSQL_DB=car_quest250
+MYSQL_PORT=3306
